# C-Chat

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  class_client.html  class_mutex.html  class_read_write_lock.html  classes.html  client  client-info_8h_source.html  client.c  client_2file-transfer_8h_source.html  client_2room_8h_source.html  client_8c.html  client_8h.html  client_8h_source.html  commands_8h.html  commands_8h_source.html  communication_8h.html  communication_8h_source.html  console-color_8h.html  console-color_8h_source.html  constants_8h.html  constants_8h_source.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  file-transfer_8h_source.html  files.html  files_8h.html  files_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  (+96 more)
.github/workflows/: cmake.yml  docs.yml  release.yml
docs/html/: index.html
documentation/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  files_0.js  (+30 more)
src/: client.c  server.c  sockets.c  sockets.h
src/client/: client.c  client.h  commands.h  console-color.h  file-transfer.c  file-transfer.h  room.c  room.h  ui.c  ui.h
src/common/: constants.h  files.c  files.h  interop.h  packets.c  packets.h  sockets.c  sockets.h  synchronization.c  synchronization.h  threads.c  threads.h
src/server/: client-info.c  client-info.h  client.h  communication.c  communication.h  file-transfer.c  file-transfer.h  handshake.c  handshake.h  room.c  room.h  server.c  server.h
